// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/DataExport/Create/ApprovalProcessPreview should render fallback error state when request fails 1`] = `
<body>
  <div>
    <div
      class="css-t6qjyj"
    >
      <div
        class="ant-result ant-result-warning"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="warning"
            class="anticon anticon-warning"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="warning"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M955.7 856l-416-720c-6.2-10.7-16.9-16-27.7-16s-21.6 5.3-27.7 16l-416 720C56 877.4 71.4 904 96 904h832c24.6 0 40-26.6 27.7-48zM480 416c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v184c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V416zm32 352a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        />
        <div
          class="ant-result-subtitle"
        >
          加载审批流程失败
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/DataExport/Create/ApprovalProcessPreview should render loading state 1`] = `
<body>
  <div>
    <div
      class="css-t6qjyj"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div>
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-spinning"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
        <div
          class="ant-spin-container ant-spin-blur"
        >
          <div
            class="approval-process-title"
          >
            审批流程
          </div>
          <div
            class="approval-process-hint"
          >
            审批流程可在 Project Configure &gt; Approval Process 中修改
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/DataExport/Create/ApprovalProcessPreview should render step list when data loaded successfully 1`] = `
<body>
  <div>
    <div
      class="css-t6qjyj"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="approval-process-title"
          >
            审批流程
          </div>
          <div
            class="approval-process-step"
          >
            <div
              class="approval-process-step-header"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="step-number"
                  >
                    步骤 1
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="ant-typography ant-typography-secondary"
                  >
                    导出审批
                  </span>
                </div>
              </div>
            </div>
            <div
              class="approval-process-step-assignee"
            >
              按权限匹配
            </div>
          </div>
          <div
            class="approval-process-hint"
          >
            审批流程可在 Project Configure &gt; Approval Process 中修改
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
